# ap-workflow

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.integration.yml  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  pytest.ini  tsconfig.node.json
alembic/: env.py
alembic/versions/: 202606160001_create_documents_and_workflow_runs.py  202606180001_add_run_id_to_workflow_runs.py  202606180002_create_rate_confirmations.py  202606180003_create_notifications.py  202606180004_create_shipments.py  202606180005_create_reconciliation_results.py  202607010001_create_workflow_audit_logs.py  202607190001_add_queue_idempotency.py  202607190002_correct_business_state_semantics.py  202607190003_normalize_load_numbers.py  202607190004_add_missing_document_sla_exceptions.py
app/: __init__.py  database.py  load_numbers.py  main.py  redis_client.py
app/core/: config.py
app/models/: __init__.py  document.py  notification.py  rate_confirmation.py  reconciliation_result.py  review_decision.py  shipment.py  shipment_exception.py  workflow_audit_log.py  workflow_run.py
app/schemas/: __init__.py  business_state.py  extraction.py  health.py  invoice_job.py  (+4 more)
scripts/: test-integration.sh
src/: App.tsx  businessState.test.ts  businessState.ts  health.test.ts  health.ts  styles.css
tests/: conftest.py  test_business_state_migration.py  test_extraction.py  test_health.py  test_invoice_worker.py  test_matching.py  test_missing_document_sla.py  test_notifier.py  test_queue_api.py  test_rate_confirmations.py  test_reconciliation.py  test_shipments.py  test_workflow.py
(+37 files in other folders)
